fix swipe animation not visible

--- a/css/style.css
+++ b/css/style.css
@@ -594,10 +594,12 @@ section#contact .contact-socials footer {
 }
 
 body.is-transitioning .swipe-transition-1 {
+  visibility: visible;
   animation: swipe-up 1.2s cubic-bezier(0.65, 0, 0.35, 1) forwards;
 }
 
 body.is-transitioning .swipe-transition-2 {
+  visibility: visible;
   animation: swipe-up 0.9s cubic-bezier(0.65, 0, 0.35, 1) 0.2s forwards;
 }
 
